2008-03-23  Guido Diepen  <guido@guidodiepen.nl>

	* Renabled the thread-safe code. Segfaults in sync-engine were
	  caused by the fact that sync-engine tried to access rapi_context of 
	  one thread via another thread. Resolved in sync-engine

      became less stable with this. 
2008-03-23  Guido Diepen  <guido@guidodiepen.nl>

	* Put the thread-safety code in ifdef. Turned out that sync-engine
      became less stable with this. 
      Currently thread-safe code has been deactivated till further notice.

2008-03-20  Mark Ellis  <mark@mpellis.org.uk>

	* BSD compatible fixes suggested by Bakulin Ilya, many thanks

2008-03-15  Guido Diepen  <guido@guidodiepen.nl>

	* Made librapi2 thread-safe by removing the static RapiContext. This is
	  replaced by pthreads thread local storage. 

2008-01-11  Guido Diepen  <guido@guidodiepen.nl>

	* Added a non-blocking CeWriteFile (it will release GIL before starting)
	* Added a non-blocking CeProcessConfig ( not used yet though )

2008-01-11  Guido Diepen  <guido@guidodiepen.nl>

	* Increased the timeout used for reading data from the socket. Old value
	  of 15 was causing too many timeouts. New value is set to 120 seconds.

2008-01-09  Mark Ellis  <mark@mpellis.org.uk>

	* added LICENSE to EXTRA_DIST
	* added hal support to rapi_context

2008-01-07  Guido Diepen  <guido@guidodiepen.nl>

	* Fixed small bug in raising error in closeHandle function
	* Added python binding for CeGetSystemInfo
	* Added python binding for CeGetVersionEx

2007-12-27  Guido Diepen  <guido@jcwodan.nl>

	* Small fix in rapi2 call of CeCreateProcess2 (remove optional-read)
	* Added python binding for CeFindAllFiles
	* Added python binding for CeCloseHandle
	* Added python binding for CeCreateFile
	* Added python binding for CeReadFile
	* Added python binding for CeWriteFilea
	* Added python binding for CeCreateProcess
	* Note, all of the above are initial implementations, more studying
	  has to be done regarding error handling. Problem is inconsistency